--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.11.15"
+        "mongoose": "^5.11.15",
+        "multer": "^1.4.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
